--- a/VentaApp/templates/VentaApp/finalizar.html
+++ b/VentaApp/templates/VentaApp/finalizar.html
@@ -2,7 +2,30 @@
 {% load static %}
 
 {% block content %}
-<h3>Resumen del # de Venta <strong>{{id}}</strong></h3>
+{% for cli in cli %}
+<div class="row">    
+  <div class="col-md-4 col-sm-12">
+      <div class="form-group">
+          <label>Nit Cliente</label>
+          <input type="text" class="form-control" name="venta" value="{{ cli.nit }}" readonly>
+      </div>
+  </div>
+  <div class="col-md-4 col-sm-12">
+      <div class="form-group">
+          <label>Negocio Cliente</label>
+          <input type="text" class="form-control" readonly value="{{cli.negocio}}">
+      </div>
+  </div>
+  <div class="col-md-4 col-sm-12">
+    <div class="form-group">
+        <label>Direccion Negocio Cliente</label>
+        <input type="text" class="form-control" readonly value="{{cli.direccion}}">
+    </div>
+  </div>
+</div>
+{% endfor %}
+<hr>
+
 <br>
 {% if messages %}
             <ul class="messages">
@@ -14,40 +37,28 @@
               </button>
             </div>
             {% endfor %}
-  {% endif %}
-  <br>
-  {{id}}
-  <form action="" method="POST">{% csrf_token %}
-  <button type="submit" class="btn btn-primary btn-sm">Finalizar</button>
-  </form>
-  <br> <br>         
+  {% endif %}      
   <table class="table">
     <thead>
       <tr>
         <th scope="col">Codigo</th>
-        <th scope="col">Referencia</th>
-        <th scope="col">Descripcion</th>
-        <th scope="col">Existencia</th>
-        <th scope="col">Precio</th>
+        <th scope="col">Precio Unidad</th>
         <th scope="col">Cantidad</th>
         <th scope="col">Total</th>
-        <th scope="col">Accion</th>
       </tr>
     </thead>
     <tbody id="nombres">
-      {% for a in art %}  
+      <form action="" method="POST">{% csrf_token %}
+      {% for a in resumen %}  
       <tr>
-        <form action="" method="POST">{% csrf_token %}
         <th scope="row"><input type="text" class="form-control" name="codigo" value="{{ a.codigo }}" readonly></th>
-        <td>{{ a.referencia }}</td>
-        <td>{{ a.descripcion }}</td>
-        <td>{{ a.existencia }}</td>
-        <td><input type="number" class="form-control" name="precio" value="{{ a.precio_venta }}" readonly onchange="multiplica(this.value);" id="txt_campo_1"></td>
-        <td><input type="number" class="form-control" name="cantidad" required id="txt_campo_2" onchange="multiplica(this.value);"/></td>
-        <td><input type="number" class="form-control" name="total" readonly required id="total"/></td>
-        </form>
+        <td><input type="text" class="form-control" name="precio" value="{{ a.precio }}" readonly></td>
+        <td><input type="text" class="form-control" name="cantidad" value="{{ a.cantidad }}" readonly></td>
+        <td><input type="text" class="form-control" name="total" value="Q.{{ a.total }}" readonly></td>
       </tr>
       {% endfor %}
+      <tr><button type="submit" class="btn btn-primary btn-sm">Finalizar Compra</button></tr>
+      </form>
     </tbody>
   </table>
 
