--- a/VentaApp/templates/VentaApp/venta.html
+++ b/VentaApp/templates/VentaApp/venta.html
@@ -2,6 +2,38 @@
 {% load static %}
 
 {% block content %}
+<div class="container" align="center"><h3 class="text-info">Datos del Cliente</h3></div><hr>
+{% for cli in cli %}
+<div class="row">    
+  <div class="col-md-4 col-sm-12">
+      <div class="form-group">
+          <label>Nit Cliente</label>
+          <input type="text" class="form-control" name="venta" value="{{ cli.nit }}" readonly>
+      </div>
+  </div>
+  <div class="col-md-4 col-sm-12">
+      <div class="form-group">
+          <label>Negocio Cliente</label>
+          <input type="text" class="form-control" readonly value="{{cli.negocio}}">
+      </div>
+  </div>
+  <div class="col-md-4 col-sm-12">
+    <div class="form-group">
+        <label>Direccion Negocio Cliente</label>
+        <input type="text" class="form-control" readonly value="{{cli.direccion}}">
+    </div>
+  </div>
+  <div class="col-md-4 col-sm-12">
+    <div class="form-group">
+        <label>Total Compra Cliente</label>
+        <input type="text" class="form-control" readonly value="Q.{{acu}}">
+    </div>
+</div>
+</div>
+{% endfor %}
+<hr>
+<div class="container" align="center"><h4>Busqueda de Producto</h4></div>
+<br>
 <input type="text" class="form-control" id="filtrar" placeholder="Filtrar Por Referencia" name="f" autofocus="f" />
 <br>
 {% if messages %}
@@ -17,7 +49,7 @@
   {% endif %}
   <br>
  
-  <br> <br>         
+          
   <table class="table">
     <thead>
       <tr>
@@ -40,9 +72,9 @@
         <td>{{ a.referencia }}</td>
         <td>{{ a.descripcion }}</td>
         <td>{{ a.existencia }}</td>
-        <td><input type="number" class="form-control" name="precio" value="{{ a.precio_venta }}" readonly id="txt_campo_1"></td>
-        <td><input type="number" class="form-control" name="cantidad"  id="txt_campo_2" onchange="multiplica(this.value);"/></td>
-        <td><input type="number" class="form-control" name="total" readonly  id="total"/></td>
+        <td><input type="number" class="form-control" name="precio" value="{{ a.precio_venta }}" readonly ></td>
+        <td><input type="number" class="form-control" name="cantidad"/></td>
+        <td><input type="hidden" class="form-control" name="total"  id="total"/></td>
         <td><button class="btn btn-success" type="submit">+</button></td>
         <td><button class="btn btn-danger" type="submit" name="fin">Fin</button></td>
         </form>
@@ -75,22 +107,5 @@
     // para activar la función de filtrado cada vez que el usuario
     // ingresa texto en la entrada
     document.getElementById("filtrar").addEventListener("keyup", filtro);
-    </script>      
-    
-    
-
-    <script>
-      /* Multiplicar dos números. */
-    function multiplica (valor) {
-    var cantidad = 0.00;
-    cantidad = parseFloat(valor).toFixed(2);
-    var precio = document.getElementById("txt_campo_1").value;
-    precio_compra = parseFloat(precio).toFixed(2)
-    console.log(parseFloat(precio_compra*cantidad));
-    document.getElementById("total").value = parseFloat(precio_compra*cantidad).toFixed(2);
-    //document.getElementById('spTotal').innerHTML = total;
-    
-}
     </script>
-
 {% endblock %}
