--- a/BaseApp/templates/BaseApp/loginbase.html
+++ b/BaseApp/templates/BaseApp/loginbase.html
@@ -36,7 +36,7 @@
 		<div class="container-fluid d-flex justify-content-between align-items-center">
 			<div class="brand-logo">
 				<a href="#">
-					<h3>Import Clouthing</h3>
+					<h3>Sistema de Inventario</h3>
 				</a>
 			</div>
 			
@@ -46,9 +46,10 @@
 		<div class="container">
 			<div class="row align-items-center">
 				<div class="col-md-2 col-lg-5">
-					<img src="{% static 'BaseApp/vendors/images/login-page-img.png' %}" alt="">
+					<img src="{% static 'BaseApp/vendors/images/login-page-img.png' %}" alt="" style="width: 75%; height: auto;">
 				</div>
-				<div class="col-md-2 col-lg-7">
+				<div class="col-md-2 col-lg-7" align="center">
+					<!--Imagen de Logo de Facebook-->
 					<div class="login-box bg-white box-shadow border-radius-10">
 						{% block content %}
 						{% endblock %}						
