--- a/InicioAdmin/templates/InicioAdmin/inicio.html
+++ b/InicioAdmin/templates/InicioAdmin/inicio.html
@@ -74,8 +74,8 @@
                         <img src="https://img.icons8.com/fluency/96/000000/cash-register.png"/>
                     </div>
                     <div class="widget-data">
-                        <div class="h4 mb-0">Q.6060</div>
-                        <div class="weight-600 font-14">Ventas</div>
+                        <div class="h4 mb-0">Q.{{total.tot}}</div>
+                        <div class="weight-600 font-14">Ventas Totales</div>
                     </div>
                 </div>
             </div>
