--- a/PagoApp/templates/PagoApp/pago.html
+++ b/PagoApp/templates/PagoApp/pago.html
@@ -135,7 +135,7 @@
               <option value="Cheque">Cheque</option>
               <option value="Tarjeta">Tarjeta Debito/Credito</option>
               <option value="Deposito">Deposito Bancario</option>
-              <option value="Dolares">Dolares</option>
+              <option value="Dolares">Nota de Credito</option>
             </select>
           </div>
         </div>
