Gracias a Dios Iniciando Las Anulaciones de Ventas

--- a/BaseApp/templates/BaseApp/base.html
+++ b/BaseApp/templates/BaseApp/base.html
@@ -99,7 +99,7 @@
 						</a>
 						<ul class="submenu">
 							<li><a href="{% url 'IniciarVenta' %}">Nueva Venta</a></li>
-							<li><a href="#">Anular Venta</a></li>
+							<li><a href="{% url 'AnularVenta' %}">Anular Venta</a></li>
 							<li><a href="#">Historial Venta</a></li>
 						</ul>
 					</li>
