Gracias a Dios Iniciando Las Anulaciones de Ventas

--- a/AnularApp/templates/AnularApp/listaventas.html
+++ b/AnularApp/templates/AnularApp/listaventas.html
@@ -36,7 +36,7 @@
             <td scope="row">{{v.venta}}</td>
             <td>{{v.nit.negocio}}</td>
             <td>{{v.fecha_venta}}</td>
-            <td><a class="badge bg-danger text-white" href="#">Anular</a></td>
+            <td><a class="badge bg-danger text-white" href="{% url 'ConfirmarAnulacion' v.venta v.nit %}">Anular</a></td>
           </tr>
           {% endfor %}
         </tbody>
